--- a/_config.yml
+++ b/_config.yml
@@ -75,12 +75,11 @@ social_media:
   dribbble: ScottJWalter
   facebook: ScottJWalter
   linkedin: ScottJWalter
-  medium: @scottjwalter
+  medium: "@scottjwalter"
   stackoverflow: 326607
   # telegram: your_username
   twitter: ScottJWalter
-  youtube: UCGhm-vpEJW7wQF2ePuj2fgw
->>>>>>> 3e954cf (updated links)
+  youtube: user/sjw4lt3r
   # vk: your_username
   # website: http://your_website_url
   # youtube: your_username
