--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,7 @@ social_media:
   # facebook: your_username
   # hackerrank: your_username
   # instagram: your_username
+  # keybase: your_username
   # linkedin: your_username
   # medium: your_username
   # stackoverflow: your_user_id
